# VulcanFirstSteps

./: .gitignore  CMakeLists.txt  Getting_started.h  HelloTriangleApplication.cpp  HelloTriangleApplication.h  HelloTriangleApplication_working.cpp  README.md  main.cpp
src/: HelloTriangleApplication.cpp  main.cpp
src/include/: Getting_started.hpp  HelloTriangleApplication.hpp
src/linux/: HelloTriangle_platform.hpp
src/utils/: utils.hpp
src/windows/: HelloTriangle_platform.hpp
